﻿[B]Changelog[/B]
Fixed: UR Play broke (Fixes #743)

[I]Previous changes[/I]
Added: *live* indicator to videos that are live at the moment (Fixes #741)
Added: sXXeXX if Season and Episode data is present
Fixed: SVT changed more layouts (Fixes #738)
Fixed: Categories in TV4Play only showed the first 25 items (Fixes #732)
Added: Langfilm i SVT (Fixes #730)
Fixed: TV4 would not play streams (Fixes #726)
Fixed: SVT is moving to a JSON embed data set which is breaking the SVT channel every now and then.
Fixed: The paging broke for SVT listings (Fixes #719)
Fixed: SVT updated their main show listing (Fixes #715)
Fixed: Kanal5 'recent' streams broke
Fixed: Video stream parsing for some  SVT streams (Fixes #712)
Fixed: UR Play updated their site
Fixed: SVT changed their Live channel format (Fixes #708)
Fixed: TV4play.se Live stream did not work (Fixed 697)
Fixed: UR Play website was update which broke Retrospect (Fixes #691)
Added: SVT and Oppet Arkiv Search (Fixes #681)
Fixed: Swedish Kanal 5/9/11 updated their API and broke the channels (Fixes #679)
Fixed: TV4Play added more subtitle streams that where interpreted as video (Fixes #676)
Fixed: Swedish SBS channel change video content platform and broke Kanal 5, Kanal 9 and Kanal 11 (Fixes #673)
Fixed: SVT Categories would mix up videos and folders (Fixes #652)
Added: TV12 and TV7 via TV4Play (Fixes #631)
Fixed: TV4Play had some broken lists (Fixes #629)
Added: TV4Play Live channel (Fixes #626)
Fixed: URL encode the categorie names for TV4Play (See #519)
Fixed: SVT Öppet Arkiv again (Fixes #622)
Fixed: SVT Oppet Arkiv (Fixes #621)
Updated: TV4Play added more categories (Fixes #519)
Added: TV4Play has a DRM protection indicator for Premium indication (See #620)
Added: Senaste avsnitten/clip to Kanal5.se, Kanal9.se and Kanal11.se (See #519)Added: Categories for SVT.se (Fixes #614)
Fixed: URPlay updated their JSON format (Fixes #607)
Added: 'Mest spelade', 'Mest delade', 'Senaste' and 'Sista chansen' to URPlay (Fixed #608)